[gd_scene load_steps=4 format=2]

[ext_resource path="res://cards/Card.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://default_theme.tres" type="Theme" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Cards" type="Node2D" parent="."]

[node name="Card1" parent="Cards" instance=ExtResource( 1 )]
position = Vector2( 100.8, 141.235 )
description = "A day"

[node name="CardHalf" parent="Cards" instance=ExtResource( 1 )]
position = Vector2( 45.2409, 141.235 )
points = 0.5
description = "Few Hours"

[node name="Card3" parent="Cards" instance=ExtResource( 1 )]
position = Vector2( 157.946, 141.235 )
points = 3.0
description = "Few days"

[node name="Card5" parent="Cards" instance=ExtResource( 1 )]
position = Vector2( 216.283, 141.235 )
points = 5.0
description = "Full Sprint"

[node name="Card8" parent="Cards" instance=ExtResource( 1 )]
position = Vector2( 275.811, 141.235 )
points = 8.0
description = "Too Big"

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="UI/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -42.0
margin_bottom = 19.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownLabel" type="Label" parent="UI/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 9.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="VBoxContainer" parent="UI/Control"]
margin_top = 19.8425
margin_right = 40.0
margin_bottom = 59.8425

[node name="Label" type="Label" parent="UI/Control"]
margin_right = 30.0
margin_bottom = 9.0
text = "Session:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SessionLabel" type="Label" parent="UI/Control/Label"]
margin_left = 28.5732
margin_right = 68.5732
margin_bottom = 9.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="UI/Control/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="PlayTimer" to="." method="_on_PlayTimer_timeout"]
